<resources>
    <string name="app_name">SmartPantryManager</string>
    <string name="smart_pantry_logo">Smart Pantry Logo</string>
    <string name="addition_button">Add Recipe</string>
    <string name="my_pantry">My Pantry</string>
    <string name="recipes">Recipes</string>
    <string name="pantry">Pantry</string>
    <string name="settings">Settings</string>
    <string name="add_ingredient_title">Add Ingredient</string>
    <string name="edit_ingredient_title">Edit Ingredient</string>
    <string name="recipe_tab">Recipe Tab</string>
    <string name="pantry_tab">Pantry Tab</string>
    <string name="settings_tab">Settings Tab</string>
    <string name="measurement_system_label">Measurement System:</string>
    <string name="measurement_system_guidance">Choose How You Want Ingredient Units To Be Displayed</string>
    <string name="about_spm">About Smart Pantry Manager</string>
    <string name="version">Version 1.0</string>
    <string name="confirm_btn_text">Confirm</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="ingredient_name_label">Ingredient Name:</string>
    <string name="ingredient_qty_label">Qty:</string>
    <string name="ingredient_unit_label">Unit:</string>
    <string name="sample_ingredient">Tomato</string>
    <string name="edit_ingredient"> </string>
    <string name="edit_qty"> </string>
    <string name="sample_qty">0</string>
    <string name="ingredients_heading">Ingredients:</string>
    <string name="recipe_heading">Recipe:</string>
    <string name="recipe_instructions_heading">Instructions:</string>
    <string name="recipe_ingredient_count_label">6 Ingredients</string>
    <string name="recipe_name">Lasagna</string>

    <string name="pantry_ingredient_name">Tomato</string>
    <string name="pantry_ingredient_qty">200 g</string>

    <string name="edit_pantry_ingredient">Edit Pantry Ingredient</string>
    <string name="delete_pantry_ingredient">Delete Pantry Ingredient</string>
    <string name="back_button">back</string>

    <string name="empty_ingredient_error_msg">Empty Name Field - Please Enter Ingredient Name</string>
    <string name="empty_qty_error_msg">Empty Qty Field - Please Enter Valid Quantity</string>
    <string name="invalid_qty_error_msg">Invalid Qty - Must Be A Positive Number</string>
    <string name="pantry_ingredient_already_exists_error_msg">This Ingredient Is Already In Your Pantry</string>

    <string name="ingredient_list">* Pasta - 250 g</string>
    <string name="recipe_instruction">Boil the pasta for ...</string>

    <string name="empty_pantry_text">
        -Pantry Empty-
        \nHint: Click The \'+\' Icon To Add Ingredient
    </string>

    <string name="empty_suggested_recipe_text">
        -No Recipes Match Your Pantry Yet-
        \nHint: Add More Ingredients
    </string>

    <string-array name="measurement_options">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="metric_unit_options">
        <item>g</item>
        <item>kg</item>
        <item>tsp</item>
        <item>tbsp</item>
        <item>l</item>
        <item>ml</item>
        <item>piece</item>
    </string-array>

    <string-array name="imperial_unit_options">
        <item>oz</item>
        <item>pound</item>
        <item>tsp</item>
        <item>tbsp</item>
        <item>fluid oz</item>
        <item>piece</item>
    </string-array>
</resources>