<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_ingredient_form"
    android:background="#F8F2E4"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditIngredientActivity">

    <include
        android:id="@+id/header"
        layout="@layout/header_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:textColor="@color/body_text"
            android:text="@string/ingredient_name_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_ingredient_name"
            android:layout_width="match_parent"
            android:textColor="@color/body_text"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/sample_ingredient" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:textColor="@color/body_text"
            android:layout_marginTop="20dp"
            android:text="@string/ingredient_qty_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_ingredient_qty"
            android:layout_width="match_parent"
            android:textColor="@color/body_text"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:text="@string/sample_qty"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/body_text"
            android:layout_marginTop="20dp"
            android:text="@string/ingredient_unit_label"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/edit_ingredient_unit_spinner"
            android:layout_width="162dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/edit_ingredient_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="TextView"
            android:textColor="@color/error_message_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/cancel_edit_ingredient_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel_btn_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/confirm_edit_ingredient_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/confirm_btn_text" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/nav_bar"
        layout="@layout/nav_bar"/>

</LinearLayout>