<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pi_recycler_view_row"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="388dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/ingredient_card_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ingredient_card_background"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ingredient"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="center|center_horizontal"
                android:layout_weight="1"
                android:paddingTop="25dp"
                android:text="@string/pantry_ingredient_name"
                android:textAlignment="center"
                android:textColor="@color/body_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider4"
                android:layout_width="1dp"
                android:layout_height="60dp"
                android:layout_gravity="center|center_horizontal"
                android:background="@color/divider_background" />

            <TextView
                android:id="@+id/ingredient_qty"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_weight="1"
                android:paddingTop="25dp"
                android:text="@string/pantry_ingredient_qty"
                android:textAlignment="center"
                android:textColor="@color/body_text"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="5dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/edit_ingredient_btn_background"
                android:contentDescription="@string/edit_pantry_ingredient"
                app:srcCompat="@drawable/edit" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="5dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/delete_ingredient_btn_background"
                android:contentDescription="@string/delete_pantry_ingredient"
                app:srcCompat="@drawable/bin" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>