<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_screen"
    android:background="#F8F2E4"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <include
        android:id="@+id/header"
        layout="@layout/header_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="286dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/measurement_system_label"
                android:textAlignment="center"
                android:textColor="@color/body_text"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/measurement_system_guidance"
                android:textAlignment="center"
                android:textColor="@color/settings_hint"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="263dp"
            android:orientation="vertical"
            android:padding="20dp">

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:foreground="@color/divider_background"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingTop="20dp"
                android:text="@string/about_spm"
                android:textAlignment="center"
                android:textColor="@color/body_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/version"
                android:textAlignment="center"
                android:textColor="@color/body_text"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/nav_bar"
        layout="@layout/nav_bar"/>

</LinearLayout>