<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#F8F2E4"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_detail_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RecipeDetailActivity">

    <include
        android:id="@+id/header"
        layout="@layout/header_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/button"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="Button" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/recipe_heading"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ingredients_heading"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:layout_marginTop="5dp"
            android:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/recipe_instructions_heading"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="5dp"
            android:text="TextView"
            android:textSize="16sp" />

    </LinearLayout>

    <include
        android:id="@+id/nav_bar"
        layout="@layout/nav_bar"/>

</LinearLayout>