<?xml version="1.0" encoding="utf-8"?>

<!--
    This will serve as the navigation bar that will be consistently shown on every screen
    There was an issue when changing the device emulator type, where this bar didn't reach the bottom.
    The root cause: I mistakenly left the layout_height as "match_parent", when that basically makes
    the navigation bar take up as much space as it's parent allows, but we need it to use it's fixed
    height.

    now the fixed height remains "79dp", while the main screen uses layout_weight="1"
    which covers the available space. Also having the layout_height="0dp" so that the content's
    can be calculated instead of explicitly stated.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_bar"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="79dp"
    android:background="@color/nav_bar_background">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/recipes"
            android:src="@drawable/recipe" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/divider_background"
        android:maxWidth="1dp"
        android:minWidth="1dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pantry"
            android:src="@drawable/pantry" />
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/divider_background"
        android:maxWidth="1dp"
        android:minWidth="1dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/settings"
            android:src="@drawable/settings" />
    </LinearLayout>

</LinearLayout>